[package]
name = "tidy-sys"
description = "Raw FFI bindings to the Tidy C library"
version = "0.3.1"
homepage = "https://github.com/insomnimus/tidy-sys"
repository = "https://github.com/insomnimus/tidy-sys"
edition = "2021"
license = "MIT"
keywords = ["html", "html-formatter", "tidy"]
categories = ["external-ffi-bindings"]

[features]
default = []
# Enable multilanguage support
localization = []

[package.metadata.docs.rs]
all-features = true

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
